# Sales-Rep-Frontned

./: .env  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  agent.py  mission.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/references/: customization.md
Agent-Vault/.obsidian/: workspace.json
api/: __init__.py  livekit_session.py  main.py  objection_store.py  rep_store.py  schemas.py  session_store.py  settings.py
api/routers/: analytics.py  catalog.py  reps.py  sessions.py
app/: globals.css  layout.tsx  page.tsx
app/roleplay/: page.tsx
cleaned_data/: __init__.py  cleaning_utils.py  clustering.py  db.py  embeddings.py  evaluate.py
components/: HistoryList.tsx  RoleplaySetup.tsx  SessionDetail.tsx
context/: __init__.py  assembler.py  loaders.py  models.py  renderer.py  selection.py  validator.py
context/data/: behavior_template.md  objection_template.md  prospect_template.md
data/seed/: objection_examples.json
docs/: knowledge_base.md  noise-cancellation.md  plans.md  prompt_construction.md  ragflow-integration-plan.md  voice_ai_design.md
docs/uncleared_docs/: claude_docs.md  example.md  ragflow-integration-plan.md  what_get_embed.md
frontend/app/: page.tsx
lib/: api.ts  data.ts  history.ts  icons.tsx  roleplay.ts
notebooks/: cleaning.ipynb  taxonomy_studio.ipynb
prompts/: behavior_template.md  offer.yaml
scripts/: build_demo_bots.py  dump_memory.py
src/: agent.py  bot_config.py  bot_enrich.py  bot_extract.py  coaching.py  debrief.py  identity.py  memory_export.py  personas.py  retrieval.py  scorecard.py  scoring.py
test/: test_agent.py
tests/: conftest.py  test_agent.py  test_api.py  test_api_livekit_env.py  test_bot_config.py  test_cleaning.py  test_coach_nonblocking.py  test_context.py  test_debrief.py  test_identity.py  test_memory_export.py  test_memory_messages.py  test_no_avatar.py  test_noise_suppression.py  test_personas.py  test_prospect_tools_reply.py  test_retrieval.py  test_scorecard.py  test_scoring.py  test_spoken_brevity.py  test_training_wiring.py  test_transcript.py
(+60 files in other folders)
