[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-rep-voice-agent"
version = "1.0.0"
description = "Voice AI sales-rep agent built with LiveKit Agents (Deepgram + OpenRouter + Cartesia + Mem0)"
requires-python = ">=3.10, <3.15"

dependencies = [
    "livekit-agents[cartesia,deepgram,openai,silero,turn-detector]~=1.4",
    "mem0ai>=1.0.9",
    "python-dotenv",
    "pyyaml>=6.0.3",
    "sounddevice>=0.5.5",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
